[project]
name = "vv-asr"
version = "0.1.0"
description = "vv-asr - 语音识别工具"
requires-python = ">=3.10"
dependencies = [
    "funasr",
    "torch",
    "torchaudio",
    "transformers>=4.57.3",
]

[project.scripts]
asr = "asr_tool:main"

[tool.uv.sources]
funasr = { git = "https://github.com/modelscope/FunASR.git", rev = "main" }
